Added project specific files
Added project specific files to ignore:
- logs
- generated sensor data
- other

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Project-specific (generated data, flight-logs)
+data/
+readout/
+data.txt
+data.csv
+logbook.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
